--- a/store/blocks/global/screen/header.jsonc
+++ b/store/blocks/global/screen/header.jsonc
@@ -47,8 +47,7 @@
   "logo": {
     "props": {
       "title": "Logo",
-      "href": "/",
-      "url": "https://brand.vtex.com/static/media/VTEX_pink_RGB.751a9fb5.svg",
+      "src": "assets/img/logo.jpg",
       "width": "80"
     }
   },
