--- a/store/blocks/global/screen/header.jsonc
+++ b/store/blocks/global/screen/header.jsonc
@@ -1,78 +1,106 @@
 {
+
   "header": {
-    "blocks": ["header-layout.desktop", "header-layout.mobile"]
+    "blocks": ["header-layout.desktop",
+      "header-layout.mobile"
+    ]
   },
-  "header.full": {
-    "blocks": ["header-layout.desktop", "header-layout.mobile"]
-  },
+
   "header-layout.desktop": {
     "children": [
-      "sticky-layout#desktop"
+      "header-row#1-desktop"
+      /*,
+           "header-row#2-desktop",
+           "header-row#3-desktop",
+           "header-row#4-desktop"*/
     ]
   },
-  "sticky-layout#desktop": {
-    "props": {
-      "blockClass": "sticky-header"
-    },
-    "children": ["flex-layout.row#desktop"]
-  },
-  "flex-layout.row#desktop": {
-    "props": {
-      "horizontalAlign": "center",
-      "verticalAlign": "center",
-      "preventHorizontalStretch": true,
-      "preventVerticalStretch": true,
-      "fullWidth": true
-    },
+
+  "header-row#1-desktop": {
     "children": [
-      "flex-layout.col#logo-desktop",
-      "flex-layout.col#spacer",
-      "search-bar",
-      "locale-switcher",
-      "login",
-      "minicart.v2"
+      "image#header__top-logo"
     ]
   },
-  "flex-layout.col#spacer": {
+
+  "image#header__top-logo": {
+    "title": "sucio",
     "props": {
-      "width": "grow"
+      "src": "assets/img/logo.png",
+      "width": 150
     }
-  },
-  "flex-layout.col#logo-desktop": {
-    "props": {
-      "verticalAlign": "middle"
-    },
-    "children": ["logo"]
-  },
-  "logo": {
-    "props": {
-      "title": "Logo",
-      "src": "assets/img/logo.jpg",
-      "width": "80"
-    }
-  },
-  "header-layout.mobile": {
-    "children": ["sticky-layout#mobile"]
-  },
-  "sticky-layout#mobile": {
-    "children": ["flex-layout.row#mobile"]
-  },
-  "flex-layout.row#mobile": {
-    "children": [
-      "drawer",
-      "logo",
-      "flex-layout.col#spacer",
-      "login",
-      "minicart.v2"
-    ],
-    "props": {
-      "blockClass": "main-header-mobile",
-      "preventHorizontalStretch": true,
-      "preserveLayoutOnMobile": true,
-      "fullWidth": true
-    }
-  },
-  "drawer": {
-    "children": []
   }
+
+  /* "header.full": {
+     "blocks": ["header-layout.desktop", "header-layout.mobile"]
+   },
+   "header-layout.desktop": {
+     "children": [
+       "sticky-layout#desktop"
+     ]
+   },
+   "sticky-layout#desktop": {
+     "props": {
+       "blockClass": "sticky-header"
+     },
+     "children": ["flex-layout.row#desktop"]
+   },
+   "flex-layout.row#desktop": {
+     "props": {
+       "horizontalAlign": "center",
+       "verticalAlign": "center",
+       "preventHorizontalStretch": true,
+       "preventVerticalStretch": true,
+       "fullWidth": true
+     },
+     "children": [
+       "flex-layout.col#logo-desktop",
+       "flex-layout.col#spacer",
+       "search-bar",
+       "locale-switcher",
+       "login",
+       "minicart.v2"
+     ]
+   },
+   "flex-layout.col#spacer": {
+     "props": {
+       "width": "grow"
+     }
+   },
+   "flex-layout.col#logo-desktop": {
+     "props": {
+       "verticalAlign": "middle"
+     },
+     "children": ["logo"]
+   },
+   "logo": {
+     "props": {
+       "title": "Logo",
+       "src": "assets/img/logo.jpg",
+       "width": "80"
+     }
+   },
+   "header-layout.mobile": {
+     "children": ["sticky-layout#mobile"]
+   },
+   "sticky-layout#mobile": {
+     "children": ["flex-layout.row#mobile"]
+   },
+   "flex-layout.row#mobile": {
+     "children": [
+       "drawer",
+       "logo",
+       "flex-layout.col#spacer",
+       "login",
+       "minicart.v2"
+     ],
+     "props": {
+       "blockClass": "main-header-mobile",
+       "preventHorizontalStretch": true,
+       "preserveLayoutOnMobile": true,
+       "fullWidth": true
+     }
+   },
+   "drawer": {
+     "children": []
+   } */
 }
