--- a/store/blocks/global/screen/home.jsonc
+++ b/store/blocks/global/screen/home.jsonc
@@ -4,31 +4,93 @@
       "image#section__one-welcome",
       "flex-layout.row#section__one-homeUp",
       "rich-text#title__section-two",
-      "flex-layout.row#section__two-categories"
-      //"flex-layout.row#bestforyou__section-three",
-      //"flex-layout.row#bestsellers__section-four",
-      //"flex-layout.row#bestwines__section-five",
-      //"flex-layout.row#yourhome__section-six",
-      //"flex-layout.row#monthsproducts__section-seven",
-      //"flex-layout.row#prefooter_section-eigth",
-      //"flex-layout.row#footer_section-nine",
+      "flex-layout.row#section__two-categories",
+      "flex-layout.row#section__two-categories2",
+      "rich-text#title__section-three",
+      "flex-layout.row#section__three-yourmarket",
+      "rich-text#title__section-four",
+      "slider-layout#section__four-bestsellers",
+      "rich-text#title__section-five",
+      "slider-layout#section__five-wines",
+      "rich-text#title__section-six",
+      "flex-layout.row#section__six-yourhome",
+      "rich-text#title__section-seven",
+      "flex-layout.row#section__seven-monthsproducts",
+      "flex-layout.row#section__eigth-prefooter"
+      //"flex-layout.row#section__nine-footer"
     ]
   },
   "image#section__one-welcome": {
     "props": {
-        "src": "assets/img/header.jpg",
-        "max-width": 600,
-        "title": "Banner principal"
+      "src": "assets/img/header.jpg",
+      "max-width": 600,
+      "title": "Banner principal"
     }
-},
-"rich-text#title__section-two": {
-  "props": {
+  },
+  "rich-text#title__section-two": {
+    "props": {
       "text": "Lo mejor para ti",
       "textAlignment": "CENTER",
       "textPosition": "left",
       "font": "t-heading-3",
       "textColor": "c-on-base"
-  }
+    }
+  },
 
-}
+  "rich-text#title__section-three": {
+    "props": {
+      "text": "Todo para tu mercado",
+      "textAlignment": "CENTER",
+      "textPosition": "left",
+      "font": "t-heading-3"
+
+    }
+
+  },
+
+  "rich-text#title__section-four": {
+    "props": {
+      "text": "Lo mas vendido",
+      "textAlignment": "CENTER",
+      "textPosition": "left",
+      "font": "t-heading-3"
+
+    }
+
+  },
+  
+
+  "rich-text#title__section-five": {
+    "props": {
+      "text": "Pague 2 lleve 3 en vinos",
+      "textAlignment": "CENTER",
+      "textPosition": "left",
+      "font": "t-heading-3"
+
+    }
+
+  }
+  ,
+
+  "rich-text#title__section-six": {
+    "props": {
+      "text": "Todo para ti y tu hogar",
+      "textAlignment": "CENTER",
+      "textPosition": "left",
+      "font": "t-heading-3"
+
+    }
+
+  },
+
+  "rich-text#title__section-seven": {
+    "props": {
+      "text": "Productos del mes",
+      "textAlignment": "CENTER",
+      "textPosition": "left",
+      "font": "t-heading-3"
+
+    }
+
+  }
 }
