--- a/store/blocks/global/screen/footer.jsonc
+++ b/store/blocks/global/screen/footer.jsonc
@@ -1,17 +1,203 @@
 {
   "footer": {
-    "blocks": ["footer-layout.desktop", "footer-layout.mobile"]
-  },
-  "footer-layout.desktop": { 
-    "children": [
-      "flex-layout.row#footer"
+    "title": "Footer",
+    "blocks": [
+      "footer-layout.desktop",
+      "footer-layout.mobile"
     ]
   },
-  "footer-layout.mobile": { 
+  "footer-layout.desktop": {
     "children": [
-      "flex-layout.row#footer"
+      "flex-layout.row#footer__container",
+      "social-networks",
+      "accepted-payment-methods"
     ]
   },
+
+  "flex-layout.row#footer__container":{
+    "children": [
+    "flex-layout.col#footer__container-group-one",
+    "flex-layout.col#footer__container-group-two",
+    "flex-layout.col#footer__container-group-three"
+  ]},
+
+  "flex-layout.col#footer__container-group-one":{
+    "children": [
+      "menu#help"
+    ]
+  },
+ 
+  "flex-layout.col#footer__container-group-two":{
+    "children": [
+      "menu#help"
+    ]
+  },
+
+  "flex-layout.col#footer__container-group-three":{
+    "children": [
+      "menu#help"
+    ]
+  },
+
+  "footer-layout.mobile": {
+    "children": [
+      "disclosure-layout-group#footer__menu-group"
+    ]
+  },
+
+  "disclosure-layout-group#footer__menu-group": {
+
+    "children": [
+      "flex-layout.row#footer"
+      /*,
+      "disclosure-layout#policies"*/
+    ]
+  },
+
+  "flex-layout.row#footer": {
+    "children": ["disclosure-layout#help",
+      "disclosure-layout#interestinfo"
+    ]
+  },
+
+  "disclosure-layout#help": {
+    "children": [
+      "disclosure-trigger#help",
+      "disclosure-content#help"
+    ]
+  },
+
+  "disclosure-trigger#help": {
+    "children": [
+      "rich-text#help"
+    ]
+  },
+
+  "rich-text#help": {
+    "props": {
+      "text": "Centro de Ayuda"
+    }
+  },
+
+
+  "disclosure-content#help": {
+    "children": [
+      "menu#help"
+    ]
+  },
+
+  "menu#help": {
+    "children": [
+      "menu-item#help-one",
+      "menu-item#help-two"
+    ],
+    "props": {
+      "orientation": "vertical"
+    }
+  },
+
+  "menu-item#help-one": {
+    "props": {
+      "id": "menu-help-one",
+      "type": "custom",
+      "itemProps": {
+        "type": "internal",
+        "href": "#",
+        "tagTitle": "Términos y condiciones",
+        "text": "Términos y condiciones"
+      }
+    }
+  },
+
+  "menu-item#help-two": {
+    "props": {
+      "id": "menu-help-two",
+      "type": "custom",
+      "itemProps": {
+        "type": "internal",
+        "href": "#",
+        "tagTitle": "Centro de ayuda",
+        "text": "Centro de ayuda"
+      }
+    }
+  },
+
+  /*Next disclosure*/
+  "disclosure-layout#interestinfo": {
+    "children": [
+      "disclosure-trigger#interestinfo",
+      "disclosure-content#interestinfo"
+    ]
+  },
+
+  "disclosure-trigger#interestinfo": {
+    "children": [
+      "rich-text#interestinfo"
+    ]
+  },
+
+  "rich-text#interestinfo": {
+    "props": {
+      "text": "Información de Interes"
+    }
+  },
+
+  "disclosure-content#interestinfo": {
+    "children": [
+      "menu#interestinfo"
+    ]
+  },
+
+  "menu#interestinfo": {
+    "children": [
+      "menu-item#interestinfo-one",
+      "menu-item#interestinfo-two"
+    ],
+    "props": {
+      "orientation": "vertical"
+    }
+  },
+
+  "menu-item#interestinfo-one": {
+    "props": {
+      "id": "menu-interestinfo-one",
+      "type": "custom",
+      "itemProps": {
+        "type": "internal",
+        "href": "#",
+        "tagTitle": "Términos y condiciones",
+        "text": "Términos y condiciones"
+      }
+    }
+  },
+
+  "menu-item#interestinfo-two": {
+    "props": {
+      "id": "menu-interestinfo-two",
+      "type": "custom",
+      "itemProps": {
+        "type": "internal",
+        "href": "#",
+        "tagTitle": "Centro de ayuda",
+        "text": "Centro de ayuda"
+      }
+    }
+  },
+
+  "social-networks": {
+    "props": {
+      "socialNetworks": [
+        { "url": "https://facebook.com/foo", "name": "Facebook" },
+        { "url": "https://twitter.com/foo", "name": "Twitter" }
+      ]
+    }
+  },
+  "accepted-payment-methods": {
+    "props": {
+      "paymentMethods": ["mastercard", "visa", "diners club"]
+    }
+  }
+  /*
   "flex-layout.row#footer": { 
     "children": [
       "image"
@@ -22,5 +208,5 @@
       "width": 100,
       "src": "https://brand.vtex.com/static/media/VTEX_pink_RGB.751a9fb5.svg"
     }
-  }
+  } */
 }
