get in order the files head and the first components

--- a/store/blocks/global/screen/product.jsonc
+++ b/store/blocks/global/screen/product.jsonc
@@ -19,7 +19,7 @@
     },
     "flex-layout.col#right": {
       "children": [
-        "product-name",
+        "vtex.product-list:product-name",
         "product-price",
         "buy-button"
       ]},
