--- a/store/blocks/global/screen/header.jsonc
+++ b/store/blocks/global/screen/header.jsonc
@@ -48,15 +48,26 @@
   },
 
   "notification.bar": {
-    /* "children":[
+    "children":[
        "rich-text#notification__bar-text",
        "rich-text#notification__bar-link"
-     ],*/
+     ],
     "props": {
       "content": "Envío gratis en tus compras de mercado superiores a $80.000 con tarjetas Carulla"
-
     }
   },
+  "rich-text#notification__bar-text":{
+    "props": {
+      "text": "Envío gratis en tus compras de mercado superiores a $80.000 con tarjetas Carulla"
+
+  }},
+
+  "rich-text#notification__bar-link":{
+    "props": {
+      "text": "Envío gratis en tus compras de mercado superiores a $80.000 con tarjetas Carulla"
+
+      
+  }},
 
   "search-bar#header__search": {
     "blocks": [
@@ -732,12 +743,7 @@
     }
   },
 
-  "flex-layout.row#minicart__footer": {
-    "children": [
-      "minicart-summary",
-      "minicart-checkout-button"
-    ]
-  },
+ 
   "minicart-product-list":{
     "blocks": [
       "product-list#minicart"
@@ -760,24 +766,50 @@
   "flex-layout.row#minicart__row-desktop":{
     "children": [
       "flex-layout.col#minicart__col-image",
-      "flex-layout.col#minicart__col-info"
+      "flex-layout.col#minicart__col-info",
+      "flex-layout.col#minicart__col-remove"
     ]
   },
 
   "flex-layout.col#minicart__col-image":{
     "children": [
       "product-list-image"
+      
     ]
   },
 
   "flex-layout.col#minicart__col-info":{
 "children": [
-      "product-name"
+      "vtex.product-list@0.x:product-name",
+      "quantity-selector#minicart",
+      "price"
     ]
   },
 
-
+  "quantity-selector#minicart":{
+    "props":{
+      "mode": "stepper"
+    }},
   
+    "flex-layout.col#minicart__col-remove":{
+      "children": ["remove-button"],
+    "props": {
+      "marginLeft": "6",
+      "verticalAlign": "middle"}
+    },
+  
+  "flex-layout.row#minicart__footer": {
+    "children": [
+      "flex-layout.col#minicart__footer"
+    ]
+  },
+  "flex-layout.col#minicart__footer": {
+    "children": [
+      "minicart-summary",
+      "minicart-checkout-button"
+    ]
+  },
+
   "rich-text#minicart__empty-rich-text":{
     "props":{
       "text": "Hola, Agrega los mejores productos a tu cesta"
