--- a/store/blocks/global/components/home-section-one.jsonc
+++ b/store/blocks/global/components/home-section-one.jsonc
@@ -1,46 +1,45 @@
 {
-
-
     "flex-layout.row#section__one-homeUp": {
         "children": [
             "slider-layout#section__one-slider"
-            //"image#section__one-principal"
-        ]
-        
-    },
-
-    /* principal children*/
-
-    "slider-layout#section__one-slider": {
-        "children": [
-            "image#initial__img1",
-            "image#initial__img2",
-            "image#initial__img3",
-            "image#initial__img4",
-            "image#initial__img5"
         ],
         "props": {
-            "autoplay": {
-                "timeout": 5000,
-                "stopOnHover": true
-            },
+            "fullWidth": "true",
+            /*"marginBottom":2,
+            "marginTop":5,*/
+            "blockClass": "section__one-homeup-slider-content"
+        }
+    },
+    /* principal children*/
+    "slider-layout#section__one-slider": {
+        "title": "section one slider",
+        "props": {
             "itemsPerPage": {
                 "desktop": 1,
                 "tablet": 1,
                 "phone": 1
             },
             "infinite": true,
+            "blockClass": "section__one-slider-container",
+            "autoplay": {
+                "timeout": 5000,
+                "stopOnHover": true
+            },
             "showNavigationArrows": "always",
-            "centerMode": "center",
-            "fullWidth": true
-
-           
-        }
+            "centerMode": "disabled",
+            "fullWidth": false
+        },
+        "children": [
+            "image#initial__img1",
+            "image#initial__img2",
+            "image#initial__img3",
+            "image#initial__img4",
+            "image#initial__img5"
+        ]
     },
-    "flex-layout.col#section__one-home":{
+    /*"flex-layout.col#section__one-home":{
         "children": ["image#section__one-principal"]
     },
-    
 
     "image#section__one-principal": {
         "props": {
@@ -51,28 +50,33 @@
     /* Secondary children*/
     "image#initial__img1": {
         "props": {
-            "src": "assets/img/slider__img1.jpg"
-            
+            "src": "assets/img/slider__img1.jpg",
+            "blockClass":"section__one-image",
+            "margin": "2rem 2rem 2rem" 
         }
     },
     "image#initial__img2": {
         "props": {
-            "src": "assets/img/slider__img2.jpg"
+            "src": "assets/img/slider__img2.jpg",
+            "blockClass":"section__one-image"
         }
     },
     "image#initial__img3": {
         "props": {
-            "src": "assets/img/slider__img3.jpg"
+            "src": "assets/img/slider__img3.jpg",
+            "blockClass":"section__one-image"
         }
     },
     "image#initial__img4": {
         "props": {
-            "src": "assets/img/slider__img4.jpg"
+            "src": "assets/img/slider__img4.jpg",
+            "blockClass":"section__one-image"
         }
     },
     "image#initial__img5": {
         "props": {
-            "src": "assets/img/slider__img5.jpg"
+            "src": "assets/img/slider__img5.jpg",
+            "blockClass":"section__one-image"
         }
     }
 }
